[project]
name = "stone-ai-news"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=49.0.0",
    "fastapi>=0.136.3",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
